# smartassets_challenge

./: EDA.ipynb  README.md  cemodel.py  feature_extraction.py  prediction_model.ipynb  pyproject.toml
