[project]
name = "smartassets-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.1.2",
    "pandas==2.2.3",
    "matplotlib==3.9.2",
    "scipy==1.14.1",
    "lightgbm==4.5.0",
    "scikit-learn==1.5.2",
    "transformers==4.45.2",
    "timm==1.0.11",
    "torchvision==0.20.0",
    "torch==2.5.0",
    "pillow==11.0.0",
    "matplotlib==3.9.2"
]
